Fixing gap in deployment page

--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -10,21 +10,31 @@
 
 .hero h1 {
   font-size: 50px;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
 }
 
 .hero h2 {
   font-size: 35px;
+  margin-block-start: 0px;
+    margin-block-end: 0px;
 }
 
 .hero h3 {
   font-size: 30px;
+  margin-block-start: 0px;
+    margin-block-end: 0px;
 }
 
 .hero h4 {
   font-size: 25px;
+  margin-block-start: 0px;
+    margin-block-end: 0px;
 }
 
 .hero h5 {
   font-size: 20px;
   font-family: 'Overlock', cursive;
+  margin-block-start: 0px;
+    margin-block-end: 0px;
 }
